--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenHack</title>
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GreenHack</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
-        <div class="headerBox">
-            <img id="logo" src="img/logo.png" alt="Logo GreenHack" />
-            <h1>GreenHack</h1>
-          </div>
-<nav>
-  <ul class="nav-links">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="pedidos.html">Pedidos</a></li>
-    <li><a href="contacto.html">Contacto</a></li>
-  </ul>
-</nav>
 
-    </header>
+<body id="arriba">
+  <header>
+    <div class="headerBox">
+        <img id="logo" src="img/logo.png" alt="Logo GreenHack" />
+        <h1>GreenHack</h1>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="pedidos.html">Pedidos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+</header>
   
     <main>
       <section id="quienes-somos">
@@ -44,10 +44,11 @@
             </div>
       </section>
     </main>
-    <p><a href="#">Volver</a></p> 
-    <footer>
-      <p>Contacto: info@greenhack.com | Tel: 123 456 789</p>
+    <button class="botones"><a href="pedidos.html">Te interesa? Escribenos!</a></button>
 
+    <footer>
+      <button class="botones" id="volver-arriba"><a href="#arriba">↑ Volver arriba ↑</a></button>
+      <p>info@greenhack.com | Carrer de Pamplona, 96, Sant Martí, 08018 Barcelona | Tel: 123 456 789</p>
     </footer>
   </body>
 </html>
